Finish the features section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="css/styles.css">
 
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.ico">
+
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/4f7fab4458.js" crossorigin="anonymous"></script>
 
@@ -28,14 +31,10 @@
   <section id="title">
     <div class="container-fluid">
 
-
-
       <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
-        <!--    <div>
-          <img class="logo-image" src="images/logo-light@3x.png" alt="logo-neuron">
-        </div> -->
+        <img class="nav-logo" src="images/thin-white-logo-.png" alt="logo-neuron">
         <a class="navbar-brand" href="">daily bias</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -56,12 +55,10 @@
       </nav>
 
       <div class="row">
-
         <div class="col-lg-6">
           <h1>Learn a new fallacy everyday. Upgrade your brain. </h1>
           <button type="button" class="btn btn-outline-primary btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
         </div>
-
 
         <div class="col-lg-6">
           <img class="title-image" src="images/mock-up.png" alt="iphone-mockup">
@@ -75,14 +72,36 @@
 
   <section id="features">
 
-    <h3>Easy to learn.</h3>
-    <p>Almost effortless way to learn.</p>
+    <div class="row">
+      <div class="feature-box col-lg-4">
 
-    <h3>Level up your thinking.</h3>
-    <p>Become a master discusser.</p>
+        <img class="feature-image" src="images/watch@2x.png" alt="vintage-watch">
 
-    <h3>Simple is good.</h3>
-    <p>Beautiful but minimalistic design.</p>
+        <h3>Easy to learn.</h3>
+        <p>Almost effortless way to learn.</p>
+
+
+      </div>
+
+      <div class="feature-box col-lg-4">
+        <img class="feature-image" src="images/flower-2.png" alt="cotton-flower">
+        <h3>Level up your thinking.</h3>
+        <p>Become a master discusser.</p>
+
+      </div>
+      <div class="feature-box col-lg-4">
+        <img class="feature-image" src="images/bike.png" alt="crown">
+
+        <h3>Simple is good.</h3>
+        <p>Beautiful but minimalistic design.</p>
+
+
+      </div>
+
+
+
+    </div>
+
 
   </section>
 
@@ -101,16 +120,6 @@
 
   </section>
 
-
-  <!-- Press -->
-
-  <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
-
-  </section>
 
 
   <!-- Donation -->
