--- a/index.html
+++ b/index.html
@@ -71,55 +71,61 @@
   <!-- Features -->
 
   <section id="features">
-
     <div class="row">
       <div class="feature-box col-lg-4">
-
         <img class="feature-image" src="images/watch@2x.png" alt="vintage-watch">
-
         <h3>Easy to learn.</h3>
         <p>Almost effortless way to learn.</p>
-
-
       </div>
-
       <div class="feature-box col-lg-4">
         <img class="feature-image" src="images/flower-2.png" alt="cotton-flower">
         <h3>Level up your thinking.</h3>
         <p>Become a master discusser.</p>
-
       </div>
       <div class="feature-box col-lg-4">
         <img class="feature-image" src="images/bike.png" alt="crown">
-
         <h3>Simple is good.</h3>
         <p>Beautiful but minimalistic design.</p>
-
-
       </div>
-
-
-
     </div>
-
-
   </section>
-
 
   <!-- Testimonials -->
 
   <section id="testimonials">
 
-    <h2>I learnt so many fallacies using this app! And no bugs. The world makes more sense now when seeing through all the bullshit in media.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>HarryPotter, London</em>
+    <div id="testimonial-carousel" class="carousel slide" dark-ride="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2>"I learnt so many fallacies using this app! And no bugs. The magic world makes more sense now when seeing through all the bullshit in Daily Profet."</h2>
+          <!-- <img src="images/dog-img.jpg" alt="dog-profile"> -->
+          <em> - HarryPotter, London</em>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+        </div>
+        <div class="carousel-item">
+          <h2>"Muggles can be smart too... This is different kind of magic, and I must master it..."</h2>
+          <!-- <img src="images/dog-img.jpg" alt="dog-profile"> -->
+          <em> - Voldemort, London</em>
 
+        </div>
+        <div class="carousel-item">
+          <h2>"I'm very glad I found this application. I have realised I'm better with magic also, helps me to write good essays and articles to protect the right of every magical creature. Brilliant."</h2>
+          <!-- <img src="images/dog-img.jpg" alt="dog-profile"> -->
+          <em> - Hermione Granger, UK</em>
+
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+
+    </div>
   </section>
-
 
 
   <!-- Donation -->
