--- a/index.html
+++ b/index.html
@@ -130,30 +130,65 @@
 
   <!-- Donation -->
 
-  <section id="pricing">
+  <section id="plans">
 
-    <h2>I believe information is free.</h2>
+    <h3>I believe information should be free.</h3>
     <p> Anyhow, if you like the app you can always donate.</p>
 
 
-    <h3>FREE PLAN</h3>
-    <h2>Free</h2>
-    <p>1 Bias Per Day*</p>
-    <p>New bias will be available after finishing the previous one</p>
-    <p>Unlimited App Usage</p>
-    <button type="button" class="btn btn-outline-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
+    <div class="row">
 
-    <h3>GET THEM ALL NOW</h3>
-    <h2>€10</h2>
-    <p>Access to the all biases immediately</p>
-    <button type="button" class="btn btn-outline-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
+      <div class="plan-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h4>Free</h4>
+          </div>
+          <div class="card-body">
+            <h3>Free</h3>
+            <p>1 Bias Per Day*</p>
+            <p>New bias will be available after finishing the previous one</p>
+            <button type="button" class="btn btn-outline-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
+
+          </div>
+        </div>
+      </div>
+      <div class="plan-column col-lg-4 col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h4>Pro</h4>
+          </div>
+          <div class="card-body">
+            <h3>€10</h3>
+            <p>Access to the all biases immediately</p>
+            <p>Access forever!</p>
+            <button type="button" class="btn btn-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
+          </div>
+        </div>
+
+      </div>
+      <div class="plan-column col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h4>Donate</h4>
+          </div>
+          <div class="card-body">
+            <h3>x</h3>
+            <p>If you want donate, you can do it here!</p>
+            <p>Help me to improve the app</p>
+            <button type="button" class="btn btn-primary btn-lg">Donate Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
-    <h3>Donate</h3>
-    <h2>x</h2>
-    <p>If you want donate, you can do it here</p>
-    <p>Help me to improve the app</p>
-    <button type="button">Donate</button>
+
+
+
+
+
+
+
 
   </section>
 
