--- a/index.html
+++ b/index.html
@@ -189,7 +189,6 @@
 
 
 
-
   </section>
 
 
@@ -197,9 +196,10 @@
 
   <section id="cta">
 
-    <h3>Start upgrading and mastering your brain.</h3>
-    <button type="button">Download</button>
-    <button type="button">Donate</button>
+    <h2>Start upgrading and mastering your brain!</h2>
+    <button type="button" class="btn btn-outline-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
+
+
 
   </section>
 
