--- a/index.html
+++ b/index.html
@@ -195,8 +195,10 @@
   <!-- Call to Action -->
 
   <section id="cta">
-
+<div class="cta-header">
     <h2>Start upgrading and mastering your brain!</h2>
+</div>
+
     <button type="button" class="btn btn-outline-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
 
 
