--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 <body>
 
   <section id="title">
+
+    <!-- Nav Bar -->
     <div class="container-fluid">
 
-      <!-- Nav Bar -->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
         <img class="nav-logo" src="images/thin-white-logo-.png" alt="logo-neuron">
@@ -42,21 +43,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="">Contact</a>
+              <a class="nav-link" href="#features">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">About</a>
+              <a class="nav-link" href="#plans">Plans</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Download</a>
+              <a class="nav-link" href="#cta">Contact</a>
             </li>
           </ul>
-        </div>
       </nav>
 
       <div class="row">
         <div class="col-lg-6">
-          <h1>Learn a new fallacy everyday. Upgrade your brain. </h1>
+          <h1 class="big-heading"> Learn a new fallacy everyday. Upgrade your brain. </h1>
           <button type="button" class="btn btn-outline-primary btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
         </div>
 
@@ -65,27 +65,31 @@
         </div>
       </div>
     </div>
-
+    </div>
   </section>
 
   <!-- Features -->
 
   <section id="features">
-    <div class="row">
-      <div class="feature-box col-lg-4">
-        <img class="feature-image" src="images/watch@2x.png" alt="vintage-watch">
-        <h3>Easy to learn.</h3>
-        <p>Almost effortless way to learn.</p>
-      </div>
-      <div class="feature-box col-lg-4">
-        <img class="feature-image" src="images/flower-2.png" alt="cotton-flower">
-        <h3>Level up your thinking.</h3>
-        <p>Become a master discusser.</p>
-      </div>
-      <div class="feature-box col-lg-4">
-        <img class="feature-image" src="images/bike.png" alt="crown">
-        <h3>Simple is good.</h3>
-        <p>Beautiful but minimalistic design.</p>
+    <div class="container-fluid">
+
+
+      <div class="row">
+        <div class="feature-box col-lg-4">
+          <img class="feature-image" src="images/watch@2x.png" alt="vintage-watch">
+          <h3 class="feature-text">Easy to learn.</h3>
+          <p>Almost effortless way to learn.</p>
+        </div>
+        <div class="feature-box col-lg-4">
+          <img class="feature-image" src="images/flower-2.png" alt="cotton-flower">
+          <h3 class="feature-text">Level up your thinking.</h3>
+          <p>Become a master discusser.</p>
+        </div>
+        <div class="feature-box col-lg-4">
+          <img class="feature-image" src="images/bike.png" alt="crown">
+          <h3 class="feature-text">Simple is good.</h3>
+          <p>Beautiful but minimalistic design.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -96,20 +100,20 @@
 
     <div id="testimonial-carousel" class="carousel slide" dark-ride="false">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>"I learnt so many fallacies using this app! And no bugs. The magic world makes more sense now when seeing through all the bullshit in Daily Profet."</h2>
+        <div class="container-fluid carousel-item active">
+          <h2 class="testimonial-text">"I learnt so many fallacies using this app! And no bugs. The magic world makes more sense now when seeing through all the bullshit in Daily Profet."</h2>
           <!-- <img src="images/dog-img.jpg" alt="dog-profile"> -->
           <em> - HarryPotter, London</em>
 
         </div>
-        <div class="carousel-item">
-          <h2>"Muggles can be smart too... This is different kind of magic, and I must master it..."</h2>
+        <div class="container-fluid carousel-item">
+          <h2 class="testimonial-text">"Muggles can be smart too... This is different kind of magic, and I must master it..."</h2>
           <!-- <img src="images/dog-img.jpg" alt="dog-profile"> -->
           <em> - Voldemort, London</em>
 
         </div>
-        <div class="carousel-item">
-          <h2>"I'm very glad I found this application. I have realised I'm better with magic also, helps me to write good essays and articles to protect the right of every magical creature. Brilliant."</h2>
+        <div class="container-fluid carousel-item">
+          <h2 class="testimonial-text">"I'm very glad I found this application. I have realised I'm better with magic also, helps me to write good essays and articles to protect the right of every magical creature. Brilliant."</h2>
           <!-- <img src="images/dog-img.jpg" alt="dog-profile"> -->
           <em> - Hermione Granger, UK</em>
 
@@ -132,7 +136,7 @@
 
   <section id="plans">
 
-    <h3>I believe information should be free.</h3>
+    <h2>I believe information should be free.</h2>
     <p> Anyhow, if you like the app you can always donate.</p>
 
 
@@ -141,10 +145,10 @@
       <div class="plan-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h4>Free</h4>
+            <h4 class="middle-heading">Free</h4>
           </div>
           <div class="card-body">
-            <h3>Free</h3>
+            <h3 class="pricing-text">Free</h3>
             <p>1 Bias Per Day*</p>
             <p>New bias will be available after finishing the previous one</p>
             <button type="button" class="btn btn-outline-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
@@ -155,10 +159,10 @@
       <div class="plan-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
-            <h4>Pro</h4>
+            <h4 class="middle-heading">Pro</h4>
           </div>
           <div class="card-body">
-            <h3>€10</h3>
+            <h3 class="pricing-text">€10</h3>
             <p>Access to the all biases immediately</p>
             <p>Access forever!</p>
             <button type="button" class="btn btn-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
@@ -169,10 +173,10 @@
       <div class="plan-column col-lg-4">
         <div class="card">
           <div class="card-header">
-            <h4>Donate</h4>
+            <h4 class="middle-heading">Donate</h4>
           </div>
           <div class="card-body">
-            <h3>x</h3>
+            <h3 class="pricing-text">x</h3>
             <p>If you want donate, you can do it here!</p>
             <p>Help me to improve the app</p>
             <button type="button" class="btn btn-primary btn-lg">Donate Now</button>
@@ -183,33 +187,35 @@
 
 
 
-
-
-
-
-
-
   </section>
+
 
 
   <!-- Call to Action -->
 
   <section id="cta">
-<div class="cta-header">
-    <h2>Start upgrading and mastering your brain!</h2>
-</div>
-
-    <button type="button" class="btn btn-outline-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
+    <div class="container-fluid">
 
 
+      <h1 class="big-heading"> Start upgrading and mastering your brain!</h1>
+
+
+      <button type="button" class="cta-button btn btn-outline-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="cta-button btn btn-primary btn-lg">Contact</button>
+    </div>
 
   </section>
 
   <!-- Footer -->
 
   <footer id="footer">
+    <div class="container-fluid">
+      <a href="https://www.facebook.com/"><i class="footer-icon fab fa-facebook"></i></a>
+      <a href="https://www.linkedin.com/"><i class="footer-icon fab fa-linkedin"></i></a>
+      <a href="https://www.twitter.com/"><i class="footer-icon fab fa-twitter"></i></a>
+      <p class="copyright-text"> © Copyright 2021 Anniina Korkiakangas</p>
 
-    <p>© Copyright 2021 Anniina Korkiakangas</p>
+    </div>
 
   </footer>
 
