--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+
   <meta charset="utf-8">
   <title>Daily Bias</title>
 
@@ -24,16 +25,18 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
 
+  <!-- Title  -->
+
   <section id="title">
 
     <!-- Nav Bar -->
-    <div class="container-fluid">
 
-
+    <div class="container-fluid dark-section">
       <nav class="navbar navbar-expand-lg navbar-dark">
         <img class="nav-logo" src="images/thin-white-logo-.png" alt="logo-neuron">
         <a class="navbar-brand" href="">daily bias</a>
@@ -54,12 +57,13 @@
           </ul>
       </nav>
 
+      <!-- Title Content -->
+
       <div class="row">
         <div class="col-lg-6">
           <h1 class="big-heading"> Learn a new fallacy everyday. Upgrade your brain. </h1>
           <button type="button" class="btn btn-outline-primary btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
         </div>
-
         <div class="col-lg-6">
           <img class="title-image" src="images/mock-up.png" alt="iphone-mockup">
         </div>
@@ -71,9 +75,7 @@
   <!-- Features -->
 
   <section id="features">
-    <div class="container-fluid">
-
-
+    <div class="container-fluid white-section">
       <div class="row">
         <div class="feature-box col-lg-4">
           <img class="feature-image" src="images/watch@2x.png" alt="vintage-watch">
@@ -97,26 +99,19 @@
   <!-- Testimonials -->
 
   <section id="testimonials">
-
-    <div id="testimonial-carousel" class="carousel slide" dark-ride="false">
+    <div id="testimonial-carousel" class="carousel slide dark-section" dark-ride="false">
       <div class="carousel-inner">
         <div class="container-fluid carousel-item active">
           <h2 class="testimonial-text">"I learnt so many fallacies using this app! And no bugs. The magic world makes more sense now when seeing through all the bullshit in Daily Profet."</h2>
-          <!-- <img src="images/dog-img.jpg" alt="dog-profile"> -->
-          <em> - HarryPotter, London</em>
-
+          <em> - Harry Potter, London</em>
         </div>
         <div class="container-fluid carousel-item">
           <h2 class="testimonial-text">"Muggles can be smart too... This is different kind of magic, and I must master it..."</h2>
-          <!-- <img src="images/dog-img.jpg" alt="dog-profile"> -->
           <em> - Voldemort, London</em>
-
         </div>
         <div class="container-fluid carousel-item">
           <h2 class="testimonial-text">"I'm very glad I found this application. I have realised I'm better with magic also, helps me to write good essays and articles to protect the right of every magical creature. Brilliant."</h2>
-          <!-- <img src="images/dog-img.jpg" alt="dog-profile"> -->
           <em> - Hermione Granger, UK</em>
-
         </div>
       </div>
       <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
@@ -127,21 +122,15 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-
     </div>
   </section>
 
-
-  <!-- Donation -->
+  <!-- Plans Section -->
 
   <section id="plans">
-
     <h2>I believe information should be free.</h2>
     <p> Anyhow, if you like the app you can always donate.</p>
-
-
     <div class="row">
-
       <div class="plan-column col-lg-4 col-md-6">
         <div class="card">
           <div class="card-header">
@@ -152,7 +141,6 @@
             <p>1 Bias Per Day*</p>
             <p>New bias will be available after finishing the previous one</p>
             <button type="button" class="btn btn-outline-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
-
           </div>
         </div>
       </div>
@@ -168,7 +156,6 @@
             <button type="button" class="btn btn-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
           </div>
         </div>
-
       </div>
       <div class="plan-column col-lg-4">
         <div class="card">
@@ -184,41 +171,28 @@
         </div>
       </div>
     </div>
-
-
-
   </section>
-
-
 
   <!-- Call to Action -->
 
   <section id="cta">
-    <div class="container-fluid">
-
-
+    <div class="container-fluid dark-section">
       <h1 class="big-heading"> Start upgrading and mastering your brain!</h1>
-
-
       <button type="button" class="cta-button btn btn-outline-primary btn-lg"><i class="fab fa-apple"></i> Download</button>
       <button type="button" class="cta-button btn btn-primary btn-lg">Contact</button>
     </div>
-
   </section>
 
   <!-- Footer -->
 
   <footer id="footer">
-    <div class="container-fluid">
+    <div class="container-fluid dark-section">
       <a href="https://www.facebook.com/"><i class="footer-icon fab fa-facebook"></i></a>
       <a href="https://www.linkedin.com/"><i class="footer-icon fab fa-linkedin"></i></a>
       <a href="https://www.twitter.com/"><i class="footer-icon fab fa-twitter"></i></a>
       <p class="copyright-text"> © Copyright 2021 Anniina Korkiakangas</p>
-
     </div>
-
   </footer>
-
 
 </body>
 
